_build/html/reports/puissiter.log
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/local/Cellar/python@3.9/3.9.13/Frameworks/Python.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 559, in async_execute
    await self.async_execute_cell(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np
import matplotlib.pyplot as plt

def puissiter(A,v0,lam,niter,epsilon):
    v = v0
    vv = [v0]
    l = np.dot(v0,np.dot(A,v0))
    ll = [l]
    k=0
    while np.fabs(lam-l)>epsilon and k<niter:
        w = np.dot(A,v)
        v = w/np.linalg.norm(w)
        l = np.dot(v,np.dot(A,v))
        vv.append(v)
        ll.append(l)
        k=k+1
    return ll, vv,k

A = np.array([[2.,1,-1],[1,3,1],[-1,1,4]])
lam =np.max(np.linalg.eigvals(A))
print("La plus grande valeur propre de A est ",lam)

epsilon = 1e-4
niter=50
ll, vv,k = puissiter(A,np.ones(3),lam,niter,epsilon)

plt.plot(range(len(ll)),ll,'-o',label='Puissances itérées')
plt.plot(range(len(ll)),lam*np.ones((len(ll)), dtype=np.uint8) ,'r')
plt.ylabel('valeur propre')
plt.xlabel('Iteration');
plt.legend()
titre = 'Valeur propre approchée à', epsilon', près en ',k,' itérations'
plt.title(titre)
plt.tight_layout()



------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    titre = 'Valeur propre approchée à', epsilon', près en ',k,' itérations'[0m
[0m                                                ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-6bf2de0650fb>, line 32)

